--- a/_/styles/main.css
+++ b/_/styles/main.css
@@ -1,89 +1,12 @@
-html {
+html, body {
   margin: 0;
-  padding: 0; }
-
-body {
-  background: url("../img/breaddk.jpg") no-repeat top center;
   padding: 0;
-  margin: 0; }
+  font-family: "Open Sans", serif; }
 
 .wrap {
   width: 80%;
   margin: 0 auto; }
 
-@media only screen and (min-width: 690px) {
-  body {
-    background-size: cover; } }
-h1, h2, h3, h4 {
-  font-family: "Ovo", serif;
-  color: white;
-  font-weight: normal; }
-
-h1 {
-  font-size: 1.25em; }
-
-h2, h3 {
-  font-size: 2em;
-  margin-bottom: 15px; }
-
-a {
-  text-decoration: none; }
-
-@media only screen and (min-width: 690px) {
-  h1 {
-    font-size: 1.5em; }
-
-  h2, h3 {
-    font-size: 2.5em; } }
-#main-content {
-  height: auto;
-  font-family: "Muli", sans-serif;
-  text-align: center;
-  padding: 50px 0;
-  color: white; }
-
-#answer {
-  display: none; }
-
-.questionGroup2,
-.questionGroup3,
-.questionGroup4,
-.questionGroup5,
-.questionGroup6 {
-  display: none; }
-
-.answerDescription {
-  max-width: 600px;
-  margin: 30px auto;
-  font-size: 1.4em; }
-
-radiogroup {
-  font-size: 1.4em; }
-
-radiogroup input {
-  margin-bottom: 10px; }
-
-.resetButton {
-  font-size: 1em;
-  background: transparent;
-  border: solid 3px white;
-  padding: 5px 20px;
-  color: white;
-  font-family: "Ovo", serif; }
-
-.resetButton:hover {
-  background: white;
-  color: black; }
-
-@media only screen and (min-width: 690px) {
-  #main-content {
-    height: 100vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center; } }
 header {
   text-align: center; }
   header nav li {
@@ -91,9 +14,6 @@ header {
     padding: 0 0 0 5px; }
   header nav li.start {
     padding: 0 20px 0 0; }
-  header nav a {
-    color: white;
-    font-family: "Muli", sans-serif; }
   header .addthis_inline_share_toolbox {
     display: inline-block;
     vertical-align: middle; }
@@ -116,17 +36,14 @@ header {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center; } }
-footer {
-  font-family: "Muli", sans-serif;
-  color: white; }
-  footer p {
-    text-align: center;
-    font-size: 14px;
-    padding: 0 20px; }
-    footer p a {
-      color: white; }
-    footer p a:hover {
-      text-decoration: underline; }
+footer p {
+  text-align: center;
+  font-size: 14px;
+  padding: 0 20px; }
+  footer p a {
+    color: white; }
+  footer p a:hover {
+    text-decoration: underline; }
 
 @media only screen and (min-width: 690px) {
   footer {
