--- a/_/styles/partials/_base.css
+++ b/_/styles/partials/_base.css
@@ -1,18 +1,9 @@
-html {
+html, body {
   margin: 0;
   padding: 0; }
-
-body {
-  background: url("../img/breaddk.jpg") no-repeat top center;
-  padding: 0;
-  margin: 0; }
 
 .wrap {
   width: 80%;
   margin: 0 auto; }
-
-@media only screen and (min-width: 690px) {
-  body {
-    background-size: cover; } }
 
 /*# sourceMappingURL=_base.css.map */
