--- a/_/styles/partials/_base.scss
+++ b/_/styles/partials/_base.scss
@@ -1,23 +1,10 @@
-html {
+html, body {
 	margin: 0;
 	padding: 0;
-}
-
-body {
-	background: url('../img/breaddk.jpg') no-repeat top center;
-	padding: 0;
-	margin: 0;
+	font-family: $open;
 }
 
 .wrap {
 	width: 80%;
 	margin: 0 auto;
-}
-
-@media only screen and (min-width: 690px) {
-
-  	body {
-  		background-size: cover;
-  	}
-
 }
