--- a/styles/modules/_header.scss
+++ b/styles/modules/_header.scss
@@ -1,36 +1,54 @@
 header {
 	text-align: center;
 
-	nav li {
-		display: inline-block;
-		padding: 0 0 0 5px;
+	#banner {
+		background: url('../img/photo-grid.jpg') no-repeat top right;
+		background-size: cover;
+		height: 65vh;
 	}
 
-		nav li.start {
-			padding: 0 20px 0 0;
-		}
+	nav ul {
+		padding: 35px 0;
+		margin: 0;
+		-webkit-box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.11);
+		-moz-box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.11);
+		box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.11);
+	}
 
-	.addthis_inline_share_toolbox {
+	nav li {
 		display: inline-block;
-		vertical-align: middle;
+		padding: 0 2%;
+
+		a {
+			font-weight: 600;
+			color: $grey;
+			text-transform: uppercase;
+			letter-spacing: .75px;
+			-webkit-transition: all .3s ease, opacity .3s ease;
+     		-moz-transition: all .3s ease, opacity .3s ease;
+     		-o-transition: all .3s ease, opacity .3s ease;
+     		transition: all .3s ease, opacity .3s ease;
+		}
+		a:hover {
+			color: lighten($grey, 25%);
+		}
 	}
 
 }
 
-@media only screen and (min-width: 690px) {
+@media only screen and (min-width: 768px) {
 
 	header {
-		background: transparent;
-    	position: absolute;
-    	width: 100%;
-    	top: 0;
-    	z-index: 90;
-	}
 
-  	header .wrap {
-		@include flexit;
-		@include flex-justify;
-		@include flex-center;
+		nav li {
+			display: inline-block;
+			padding: 0 40px;
+
+			a {
+				font-size: 1.250em;
+			}
+		}
+
 	}
 
 }
