--- a/styles/partials/_page.scss
+++ b/styles/partials/_page.scss
@@ -2,6 +2,26 @@
 
 	.intro {
 		padding: 100px 0;
+		text-align: center;
+
+		h1 {
+			font-size: 2em;
+		}
 	}
-	
+
+}
+
+@media only screen and (min-width: 768px) {
+
+	#main-content {
+		.intro {
+			max-width: 840px;
+			margin: 0 auto;
+
+			h1 {
+				font-size: 3.25em;
+			}
+		}
+	}
+
 }
