--- a/styles/partials/_base.scss
+++ b/styles/partials/_base.scss
@@ -1,3 +1,4 @@
+// base styles for html, body, etc. universals
 html, body {
 	margin: 0;
 	padding: 0;
@@ -5,7 +6,7 @@ html, body {
 }
 
 .wrap {
-	width: 80%;
+	width: 90%;
 	margin: 0 auto;
 }
 
