--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@ html, body {
   font-family: "Open Sans", serif; }
 
 .wrap {
-  width: 80%;
+  width: 90%;
   margin: 0 auto; }
 
 a {
@@ -12,17 +12,38 @@ a {
   outline: none; }
 
 #main-content .intro {
-  padding: 100px 0;
-  text-align: center; }
+  padding: 60px 0;
+  text-align: center;
+  color: #555559; }
   #main-content .intro h1 {
-    font-size: 2em; }
+    font-size: 2em;
+    font-weight: 300;
+    letter-spacing: -1.75px;
+    margin: 35px 0 75px; }
+  #main-content .intro .button {
+    background: #286782;
+    color: white;
+    padding: 25px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    font-weight: 600;
+    -webkit-transition: all .3s ease, opacity .3s ease;
+    -moz-transition: all .3s ease, opacity .3s ease;
+    -o-transition: all .3s ease, opacity .3s ease;
+    transition: all .3s ease, opacity .3s ease; }
+  #main-content .intro .button:hover {
+    background: #3486a9; }
 
 @media only screen and (min-width: 768px) {
   #main-content .intro {
+    padding: 100px 0;
     max-width: 840px;
     margin: 0 auto; }
     #main-content .intro h1 {
-      font-size: 3.25em; } }
+      font-size: 3.25em; }
+    #main-content .intro .button {
+      font-size: 1.2em; } }
 header {
   text-align: center; }
   header #banner {
