--- a/styles/main.css
+++ b/styles/main.css
@@ -11,39 +11,93 @@ a {
   text-decoration: none;
   outline: none; }
 
-#main-content .intro {
-  padding: 60px 0;
-  text-align: center;
-  color: #555559; }
-  #main-content .intro h1 {
-    font-size: 2em;
-    font-weight: 300;
-    letter-spacing: -1.75px;
-    margin: 35px 0 75px; }
-  #main-content .intro .button {
-    background: #286782;
-    color: white;
-    padding: 25px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-    font-weight: 600;
-    -webkit-transition: all .3s ease, opacity .3s ease;
-    -moz-transition: all .3s ease, opacity .3s ease;
-    -o-transition: all .3s ease, opacity .3s ease;
-    transition: all .3s ease, opacity .3s ease; }
-  #main-content .intro .button:hover {
-    background: #3486a9; }
+img {
+  max-width: 100%;
+  height: auto; }
+
+h1 {
+  font-size: 2em; }
+
+h2 {
+  font-size: 1.25em; }
+
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 3.25em; }
+
+  h2 {
+    font-size: 1.5em; } }
+#main-content {
+  background: #fbfafa;
+  margin-bottom: -10px; }
+  #main-content .intro {
+    padding: 60px 0 100px;
+    text-align: center;
+    color: #555559; }
+    #main-content .intro h1 {
+      font-weight: 300;
+      letter-spacing: -1.75px;
+      margin: 35px 0 75px; }
+    #main-content .intro .button {
+      background: #286782;
+      color: white;
+      padding: 25px;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      border-radius: 10px;
+      font-weight: 600;
+      -webkit-transition: all .3s ease, opacity .3s ease;
+      -moz-transition: all .3s ease, opacity .3s ease;
+      -o-transition: all .3s ease, opacity .3s ease;
+      transition: all .3s ease, opacity .3s ease; }
+    #main-content .intro .button:hover {
+      background: #3486a9; }
+  #main-content .dog-section {
+    background: white;
+    color: #555559; }
+    #main-content .dog-section h2 {
+      letter-spacing: -1px;
+      margin-bottom: 40px; }
+  #main-content .row .wrap {
+    width: 80%;
+    margin: 0 auto;
+    padding: 50px 0; }
+  #main-content .row.vegan {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse; }
 
 @media only screen and (min-width: 768px) {
   #main-content .intro {
-    padding: 100px 0;
+    padding: 100px 0 150px;
     max-width: 840px;
     margin: 0 auto; }
     #main-content .intro h1 {
       font-size: 3.25em; }
     #main-content .intro .button {
-      font-size: 1.2em; } }
+      font-size: 1.2em; }
+  #main-content p {
+    font-size: 1.125em; }
+
+  .row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+    .row .wrap, .row .pic {
+      width: 50%; }
+    .row .wrap {
+      padding: 0 10%; } }
 header {
   text-align: center; }
   header #banner {
@@ -51,6 +105,8 @@ header {
     background-size: cover;
     height: 65vh; }
   header nav ul {
+    position: relative;
+    z-index: 10;
     padding: 35px 0;
     margin: 0;
     -webkit-box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.11);
@@ -80,7 +136,9 @@ header {
 footer {
   background: #efefef;
   padding: 30px 20px;
-  font-size: .875em; }
+  font-size: .875em;
+  position: relative;
+  z-index: 5; }
   footer .copyright {
     margin-bottom: 10px; }
 
