--- a/styles/modules/_footer.scss
+++ b/styles/modules/_footer.scss
@@ -2,12 +2,15 @@ footer {
 	background: $light;
 	padding: 30px 20px;
 	font-size: .875em;
+	position: relative;
+	z-index: 5;
 
 	.copyright {
 		margin-bottom: 10px;
 	}
 }
 
+// desktop styles
 @media only screen and (min-width: 768px) {
 
 	footer {
