--- a/styles/modules/_header.scss
+++ b/styles/modules/_header.scss
@@ -8,6 +8,8 @@ header {
 	}
 
 	nav ul {
+		position: relative;
+		z-index: 10;
 		padding: 35px 0;
 		margin: 0;
 		-webkit-box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.11);
@@ -33,6 +35,7 @@ header {
 
 }
 
+// desktop styles
 @media only screen and (min-width: 768px) {
 
 	header {
