--- a/styles/partials/_type.css
+++ b/styles/partials/_type.css
@@ -1,3 +1,14 @@
+h1 {
+  font-size: 2em; }
 
+h2 {
+  font-size: 1.25em; }
+
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 3.25em; }
+
+  h2 {
+    font-size: 1.5em; } }
 
 /*# sourceMappingURL=_type.css.map */
