--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -42,6 +42,13 @@ $blue: #286782;
     flex-direction: row-reverse;
 }
 
+@mixin flex-row {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+}
+
 @mixin flex-col {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
