--- a/styles/modules/_header.scss
+++ b/styles/modules/_header.scss
@@ -7,6 +7,16 @@ header {
 		height: 65vh;
 	}
 
+		.hashtag {
+			position: absolute;
+			top: 15px;
+			right: 15px;
+			margin: 0;
+			color: white;
+			font-weight: 600;
+			font-size: .9em;
+		}
+
 	nav ul {
 		position: relative;
 		z-index: 10;
