--- a/styles/main.css
+++ b/styles/main.css
@@ -139,14 +139,15 @@ header {
   header nav ul {
     position: relative;
     z-index: 10;
-    padding: 35px 0;
+    padding: 25px 0;
     margin: 0;
     -webkit-box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.11);
     -moz-box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.11);
     box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.11); }
   header nav li {
-    display: inline-block;
-    padding: 0 2%; }
+    display: block;
+    padding: 0 2%;
+    margin-bottom: 10px; }
     header nav li a {
       font-weight: 600;
       color: #2e2e2e;
@@ -160,9 +161,12 @@ header {
       color: #6e6e6e; }
 
 @media only screen and (min-width: 768px) {
+  header nav ul {
+    padding: 35px 0; }
   header nav li {
     display: inline-block;
-    padding: 0 30px; }
+    padding: 0 30px;
+    margin-bottom: 0; }
     header nav li a {
       font-size: 1.2em; } }
 footer {
