--- a/styles/modules/_header.scss
+++ b/styles/modules/_header.scss
@@ -20,7 +20,7 @@ header {
 	nav ul {
 		position: relative;
 		z-index: 10;
-		padding: 35px 0;
+		padding: 25px 0;
 		margin: 0;
 		-webkit-box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.11);
 		-moz-box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.11);
@@ -28,8 +28,9 @@ header {
 	}
 
 	nav li {
-		display: inline-block;
+		display: block;
 		padding: 0 2%;
+		margin-bottom: 10px;
 
 		a {
 			font-weight: 600;
@@ -50,9 +51,14 @@ header {
 
 	header {
 
+		nav ul {
+			padding: 35px 0;
+		}
+
 		nav li {
 			display: inline-block;
 			padding: 0 30px;
+			margin-bottom: 0;
 
 			a {
 				font-size: 1.2em;
