--- a/styles/partials/_page.scss
+++ b/styles/partials/_page.scss
@@ -149,7 +149,7 @@
 					width: 100%; // full width columns
 				}
 
-				.pic {
+				img {
 					margin: 0 auto; // try to get the pics looking the best they can
 				}
 			}
